# ghostwriters

./: .gitattributes  .gitignore  .~lock.subset_disent2.csv#  Ghostwriters.R  README.md  abstract.tex  acronyms.tex  references-2.bib  references.bib
.Rproj.user/5227CCAB/pcs/: files-pane.pper  windowlayoutstate.pper
.Rproj.user/5227CCAB/sources/prop/: E6A79D3C  INDEX
.Rproj.user/5227CCAB/sources/session-895ca7e2/: 99E36BDA  99E36BDA-contents  E0B7EE67
.Rproj.user/shared/notebooks/: paths
.Rproj.user/shared/notebooks/0B16B605-Ghostwriters/1/s/: chunks.json
Poznámky/: Poznámky z callů.txt
experiment_02/: IMPLEMENTATION.md  README.md  methodology_and_results.md  pyproject.toml
experiment_02/outputs/: .~lock.authorship_probabilities_logistic.csv#  authorship_probabilities_logistic.csv  feature_importance_analysis.md  feature_importance_logistic.csv  ghostwriting_analysis.md  ghostwriting_analysis_logistic.csv  ghostwriting_per_rapporteur.csv  loo_probabilities_logistic.csv
experiment_02/scripts/: run_pipeline.py
experiment_02/src/fingerprint/: __init__.py  classifiers.py  evaluation.py  feature_importance.py  preprocessing.py
experiment_02/src/fingerprint/features/: morphology.py
