[tool.poetry]
name = "experiment-02"
version = "0.1.0"
description = "Per-writer authorship classification for Czech Constitutional Court dissenting opinions"
authors = ["Petr Hrebenar"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0a0,<4.0"
pandas = ">=2.0,<4.0"
numpy = ">=1.24,<3.0"
scikit-learn = ">=1.3,<2.0"
matplotlib = ">=3.7,<4.0"
seaborn = ">=0.13,<1.0"
ufal-udpipe = ">=1.4.0.1"
xgboost = ">=1.7,<3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
